# objective-dataframe

./: pyproject.toml
.github/workflows/: pr-actions.yml
dataframe/base/: collection.py  columns.py  dataframe.py
tests/: test_collection.py  test_dataframe.py
