[tool.poetry]
name = "objective-dataframe"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
pylint = "^2.13.4"
autopep8 = "^1.6.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
